--- a/css/styles.css
+++ b/css/styles.css
@@ -30,7 +30,7 @@
   font-family: "Roboto", sans-serif;
   text-transform: uppercase;
   outline: 0;
-  background: #4CAF50;
+  background: #194a50;
   width: 100%;
   border: 0;
   padding: 15px;
@@ -90,10 +90,10 @@
 }
 body {
   background: #76b852; /* fallback for old browsers */
-  background: -webkit-linear-gradient(right, #76b852, #8DC26F);
-  background: -moz-linear-gradient(right, #76b852, #8DC26F);
-  background: -o-linear-gradient(right, #76b852, #8DC26F);
-  background: linear-gradient(to left, #76b852, #8DC26F);
+  background: -webkit-linear-gradient(right, #76b852, #000000);
+  background: -moz-linear-gradient(right, #76b852, #000000);
+  background: -o-linear-gradient(right, #76b852, #000000);
+  background: linear-gradient(to left, #76b852, #000000);
   font-family: "Roboto", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;      
