--- a/css/style.css
+++ b/css/style.css
@@ -1,411 +1,417 @@
-
-html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,dl,dt,dd,ol,nav ul,nav li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,embed,figure,figcaption,footer,header,hgroup,menu,nav,output,ruby,section,summary,time,mark,audio,video{margin:0;padding:0;border:0;font-size:100%;font:inherit;vertical-align:baseline;}
-article, aside, details, figcaption, figure,footer, header, hgroup, menu, nav, section {display: block;}
-ol,ul{list-style:none;margin:0px;padding:0px;}
-blockquote,q{quotes:none;}
-blockquote:before,blockquote:after,q:before,q:after{content:'';content:none;}
-table{border-collapse:collapse;border-spacing:0;}
-
-a{text-decoration:none;}
-.txt-rt{text-align:right;}/* text align right */
-.txt-lt{text-align:left;}/* text align left */
-.txt-center{text-align:center;}/* text align center */
-.float-rt{float:right;}/* float right */
-.float-lt{float:left;}/* float left */
-.clear{clear:both;}/* clear float */
-.pos-relative{position:relative;}/* Position Relative */
-.pos-absolute{position:absolute;}/* Position Absolute */
-.vertical-base{	vertical-align:baseline;}/* vertical align baseline */
-.vertical-top{	vertical-align:top;}/* vertical align top */
-nav.vertical ul li{	display:block;}/* vertical menu */
-nav.horizontal ul li{	display: inline-block;}/* horizontal menu */
-img{max-width:100%;}
-/*end reset*/
-
-body{
-padding:0;
-margin:0;
-font-family: 'Open Sans', sans-serif;
-background: url(../images/1.png) repeat;
+/* Template by freewebsitetemplates.com */
+body {
+	background: #077054;
+	color: #315f52;
+	font-family: 'latoregular';
+	font-size: 14px;
+	margin: 0;
+	padding: 0;
 }
-
-h1,h2,h3,h4,h5,h6{
-	margin:0;			   
-}	
-p{
-	margin:0;
+@font-face {
+	font-family: 'latoregular';
+	src: url('../fonts/lato-regular-webfont.eot');
+	src: url('../fonts/lato-regular-webfont.eot?#iefix') format('embedded-opentype'),
+		url('../fonts/lato-regular-webfont.woff') format('woff'),
+		url('../fonts/lato-regular-webfont.ttf') format('truetype'),
+		url('../fonts/lato-regular-webfont.svg#latoregular') format('svg');
+	font-weight: normal;
+	font-style: normal;
 }
-ul{
-	margin:0;
-	padding:0;
+@font-face {
+	font-family: 'nixie_oneregular';
+	src: url('../fonts/nixieone-regular-webfont.eot');
+	src: url('../fonts/nixieone-regular-webfont.eot?#iefix') format('embedded-opentype'),
+		url('../fonts/nixieone-regular-webfont.woff') format('woff'),
+		url('../fonts/nixieone-regular-webfont.ttf') format('truetype'),
+		url('../fonts/nixieone-regular-webfont.svg#nixie_oneregular') format('svg');
+	font-weight: normal;
+	font-style: normal;
 }
-label{
-	margin:0;
-}
-/*-- main --*/
-.main {
-    padding: 50px 0;
-}
-.main h1{
-	font-size:35px;
-	text-align:center;
-	text-transform:uppercase;
-	color:#B3E03F;
-    margin-bottom: 25px;
-	font-family: 'Fugaz One', cursive;
-}
-.content{
-	width:40%;
-	margin:0 auto;
-}
-p.footer {
-    color: #3AD5A0;
-    text-align: center;
-    font-size: 14px;
-    margin-top: 35px;
-    font-weight: 600;
-}
-p.footer a{
-	color:#3AD5A0;
-}
-p.footer a:hover{
-	color: #B3E03F;	
-}
-/******** SAP ************/
-.sap_tabs{
-	clear:both;
-	padding: 0em 0 0em;
-}
-.pay-tabs{
-    margin: 0 0 2em 0;
-    padding: 1em 1em 1.5em 1em;
-    background: #fff;
-    border: 1px solid #e7ebee;	
-}
-.pay-tabs h2{
-    font-size: 26px;
-    text-align: center;
-    margin-bottom: 25px;
-    color: #3AD5A0;
-    font-weight: 500;
-    font-family: 'Alegreya Sans', sans-serif;
-}
-.resp-tabs-list {
-    list-style: none;
-    margin: 0 0 0em 0;
-    padding: 0;
-}
-.resp-tab-item{
-    font-size: 14px;
-    text-decoration: none;
-    color: #a9acb1;
-	font-weight:600;
-    cursor: pointer;
-	text-align: center;
-	list-style: none;
+a {
 	outline: none;
-	-webkit-transition: all 0.3s ease-out;
-	-moz-transition: all 0.3s ease-out;
-	-ms-transition: all 0.3s ease-out;
-	-o-transition: all 0.3s ease-out;
-	transition: all 0.3s ease-out;
-	text-transform:capitalize;
-	display: inline-block;
-    margin: 0 4%;
-    float: left;
-    width: 17%;
 }
-.resp-tab-active{
-    color: #B3E03F;
+img {
+	border: none;
 }
-.resp-tabs-container {
-	padding: 0px;
-	clear: left;
-    padding: 2em 2.5em;
-    background: #fff;
-    border: 1px solid #e7ebee;	
-}
-h2.resp-accordion {
-	cursor: pointer;
-	padding: 5px;
-	display: none;
-}
-.resp-tab-content {
-	display: none;
-}
-.resp-content-active, .resp-accordion-active {
-   display: block;
-}
-li.resp-tab-item span .pic1{
-    background: url(../images/pic2.png) no-repeat 38px 15px #fafafa !important;
-
-}
-li.resp-tab-item span .pic2{
-    background: url(../images/pic3.png) no-repeat 38px 15px #fafafa !important;
-
-}
-li.resp-tab-item span .pic3{
-    background: url(../images/pic1.png) no-repeat 14px 15px #fafafa !important;
-
-}
-li.resp-tab-item span .pic4{
-    background: url(../images/pic4.png) no-repeat 38px 15px #fafafa !important;
-}
-li.resp-tab-item span .pic1,li.resp-tab-item span .pic2,li.resp-tab-item span .pic3,li.resp-tab-item span .pic4{
-    width: 100%;
-    height: 32px;
-    display: block;
-    border: 1px solid #e7ebee;
-    padding: 15px 0px;
-    margin-bottom: 15px;
-	cursor:pointer;	
-}
-li.resp-tab-item.resp-tab-active span label {
-    border: 1px solid #B3E03F;
-}
-.payment-info h3{
-    font-size: 26px;
-    text-align: center;
-    margin-bottom: 15px;
-    color: #3AD5A0;
-    font-weight: 500;
-    font-family: 'Alegreya Sans', sans-serif;
-}
-.tab-for input[type="text"] {
-    width:96%;
-    padding: 8px;
-    font-size: 13px;
-    font-weight: 600;
-    border: 1px solid #e7ebee;
-    outline: none;
-    color: #ccc;
-    border-radius: 5px;
-    margin-bottom: 20px;
-    transition:0.5s all;
-	-webkit-transition:0.5s all;
-	-moz-transition:0.5s all;
-	-o-transition:0.5s all;
-	-ms-transition:0.5s all;
-}
-.tab-for h5 ,.tab-form-left h5,.tab-form-right h5{
-    color: #435964;
-    font-size: 13px;
-    text-transform: uppercase;
-    margin: 0 0 8px 0;
-    font-weight: 600;
-}
-.tab-for input[type="text"]:hover{
-	border: 1px solid #B3E03F;
-    transition:0.5s all;
-	-webkit-transition:0.5s all;
-	-moz-transition:0.5s all;
-	-o-transition:0.5s all;
-	-ms-transition:0.5s all;
-}
-input.pay-logo{
-    width: 89.5% !important;
-    padding: 8px 45px 8px 8px !important;
-    background: url(../images/visa.png) no-repeat 507px 5px;
-}
-.tab-form-left {
-    float: left;
-    width: 48%;
-}
-.user-form ul li {
-    list-style-type: none;
-    display: inline-block;
-    width: 23%;
-    margin-right: 9%;
-}
-.text_box {
-    display: inline;
-    width: 60px;
-    padding: 3px 5px;
-    outline: none;
-    margin-left: 1%;
-    font-size: 20px;
-    color: #444;
-    width: 100%;
-    color: #606060;
-    font-size: 15px;
-    padding: 8px 0 8px 10px;
-    border: none;
-    outline: none;
-    background: #fff;
-    transition: 0.5s all;
-    -webkit-transition: 0.5s all;
-    -moz-transition: 0.5s all;
-    -o-transition: 0.5s all;
-    -ms-transition: 0.5s all;
-}
-input.text_box {
-    background: #fcfcfc;
-    border: 1px solid #ebeced;
-}
-.tab-form-right {
-    float: right;
-    width: 48%;
-}
-.tab-form-right input[type="text"] {
-    width:92%;
-    padding: 8px;
-    font-size: 13px;
-    font-weight: 600;
-    border: 1px solid #e7ebee;
-    outline: none;
-    color: #ccc;
-    border-radius: 5px;
-    margin-bottom: 30px;
-    transition:0.5s all;
-	-webkit-transition:0.5s all;
-	-moz-transition:0.5s all;
-	-o-transition:0.5s all;
-	-ms-transition:0.5s all;
-}
-.tab-form-right input[type="text"]:hover{
-	border: 1px solid #B3E03F;
-    transition:0.5s all;
-	-webkit-transition:0.5s all;
-	-moz-transition:0.5s all;
-	-o-transition:0.5s all;
-	-ms-transition:0.5s all;
-}
-.payment-info form input[type="submit"] {
-    background: #B3E03F;
-    color: #FFFFFF;
-    text-align: center;
-    padding: 10px 0;
-    border: none;
-    font-size: 16px;
-    outline: none;
-    width: 22%;
-    cursor: pointer;
-    font-weight: 600;
-	margin-bottom:30px;
-    transition: 0.5s all;
-    -webkit-transition: 0.5s all;
-    -moz-transition: 0.5s all;
-    -o-transition: 0.5s all;
-    -ms-transition: 0.5s all;
-}
-.payment-info form input[type="submit"]:hover{
-    background: #3AD5A0;
-    transition: 0.5s all;
-    -webkit-transition: 0.5s all;
-    -moz-transition: 0.5s all;
-    -o-transition: 0.5s all;
-    -ms-transition: 0.5s all;
-}
-
-.single-bottom ul li{
-	list-style:none;
-	padding:0px;
-}
-.single-bottom ul li input[type="checkbox"] {
-  display: none;
-}
-.single-bottom ul li input[type="checkbox"]+label {
-    position: relative;
-    padding-left: 31px;
-    border: none;
-    outline: none;
-    font-size: 13px;
-    color: #2d3e50;
-	font-weight:600;
-	line-height:1.8em;
-}
-.single-bottom ul li input[type="checkbox"]+label span:first-child {
-	width: 14px;
-    height: 14px;
-    display: inline-block;
-    border: 2px solid #B3E03F;
-    position: absolute;
-    left: 0;
-    top: 1px;
-}
-.single-bottom ul li input[type="checkbox"]:checked+label span:first-child:before {
-  content: "";
-  background:url(../images/11.png)no-repeat;
-  position: absolute;
-    left: -1px;
-    top: 0px;
-  font-size: 10px;
-  width:16px;
-  height:16px;
-  }
-.radio {
-	position: relative;
-	display:inline-block;
-	margin-left:15px;
-}
-.radio:first-child {
-	margin-left: 0;
+p {
+	line-height: 15px;
 	margin: 0;
 }
-.radio {
-	padding-left:22px;
-	line-height: 28px;
-	color: #404040;
-	cursor: pointer;
+p a {
+	color: #315f52;
 }
-.radio  input[type="radio"]{
-	position: absolute;
-	left: -9999px;
+p a:hover {
+	color: #451374;
 }
-.radio-btns label {
-  font-size: 14px;
-  color: #000;
-  padding: 0px 0 0 10px;
-  font-weight:600;
-  }
-.radio i {
-	position: absolute;
-	top:5px;
-	left: 0;
+#header {
+	margin: 0 auto;
+	max-width: 960px;
+}
+#header h1 {
+	font-size: 50px;
+	font-weight: normal;
+	line-height: 50px;
+	margin: 0;
+	padding: 30px 0;
+	text-align: center;
+}
+#header h1 a {
+	color: #99fa99;
+	text-decoration: none;
+}
+#header h1 a span {
+	color: #b6d8cf;
 	display: block;
-    width: 12px;
-    height: 12px;
-	outline: none;
-  border:3px solid #B5E045;
-  background: #fff;
-	cursor:pointer;
+	font-family: 'nixie_oneregular';
+	font-size: 26px;
+	text-transform: uppercase;
 }
-.radio i {
-	border-radius: 50%;
+#header ul#navigation {
+	list-style: none;
+	margin: 0;
+	padding: 0;
+	text-align: center;
 }
-.radio input + i:after {
+#header ul#navigation li {
+	display: inline;
+	line-height: 30px;
+	position: relative;
+}
+#header ul#navigation li a {
+	color: #b6d8cf;
+	font-size: 18px;
+	padding: 0 46px;
+	text-align: center;
+	text-decoration: none;
+	text-transform: uppercase;
+}
+#header ul#navigation li a:hover,
+#header ul#navigation li.current ul li a:hover {
+	color: #d3a3ff;
+}
+#header ul#navigation li.current a {
+	color: #99fa99;
+}
+#header ul#navigation li ul {
+	display: none;
+	left: 0;
+	list-style: none outside none;
+	margin: 0;
+	padding: 11px 0 0;
 	position: absolute;
-	opacity: 0;
-	transition: opacity 0.1s;
-	-o-transition: opacity 0.1s;
-	-ms-transition: opacity 0.1s;
-	-moz-transition: opacity 0.1s;
-	-webkit-transition: opacity 0.1s;
+	top: 12px;
 }
- .radio input + i:after {
-	content: '';
-	top: 6px;
-	left: 7px;
-	width: 5px;
-	height: 5px;
-	border-radius: 50%;
-	-webkit-border-radius: 50%;
-	-moz-border-radius: 50%;
-	-o-border-radius: 50%;
+#header ul#navigation li:hover ul {
+	display: block;
 }
-.radio input:checked + i:after{
-	opacity: 1;
+#header ul#navigation li ul li {
+	background: #077054;
+	display: block;
+	height: 46px;
+	line-height: 46px;
 }
-
-label.checkbox {
-	width: 28%;
-	floaT: left;
+#header ul#navigation li ul li a {
+	padding: 0 20px;
 }
-/*** normal state ***/
-.radio i {
-	transition: border-color 0.3s;
-	-o-transition: border-color 0.3s;
-	-ms-transition: border-color 0.3s;
-	-moz-transition: border-color 0.3s;
-	-webkit-transition: border-color 0.3s;
+#header ul#navigation li.current ul li a {
+	color: #b6d8cf;
+}
+#body {
+	background: #ffffff;
+	margin: 1px auto 0;
+	max-width: 880px;
+	min-height: 827px;
+	overflow: hidden;
+	padding: 45px 40px 46px;
+}
+#body > h2 {
+	color: #21a51e;
+	font-family: 'nixie_oneregular';
+	font-size: 35px;
+	font-weight: normal;
+	line-height: 30px;
+	margin: 0;
+	padding: 0 0 44px;
+}
+#body img.figure {
+	display: block;
+	float: right;
+	margin: 74px 38px 46px 0;
+	max-width: 100%;
+	width: auto;
+}
+#body div#tagline {
+	float: left;
+	margin: 110px 0 0 25px;
+	max-width: 510px;
+}
+#body div#tagline h1 {
+	background: url(../images/bg-separator.png) no-repeat center bottom;
+	color: #21a51e;
+	font-family: 'nixie_oneregular';
+	font-size: 100px;
+	font-weight: normal;
+	line-height: 100px;
+	margin: 0;
+	padding: 0 0 55px;
+	text-align: center;
+	text-transform: uppercase;
+}
+#body div#tagline p {
+	color: #21a51e;
+	font-family: 'nixie_oneregular';
+	font-size: 100px;
+	line-height: 100px;
+	padding: 43px 0 0;
+	text-align: center;
+}
+#body div.content {
+	overflow: hidden;
+}
+#body div.content > div {
+	float: left;
+	width: 510px;
+}
+#body div.content h3,
+#body form h3,
+#body ul.blog li h3 {
+	font-family: 'nixie_oneregular';
+	font-size: 23px;
+	font-weight: normal;
+	line-height: 30px;
+	margin: 0;
+	padding: 25px 0 0;
+}
+#body div.content h3:first-child,
+#body div.content div div.section:first-child {
+	padding: 0;
+}
+#body div.content img.figure {
+	margin: 0 38px 46px 0;
+}
+#body div.content div div.section {
+	padding: 55px 0 0;
+	width: 430px;
+}
+#body div.content div div.section span {
+	display: block;
+	line-height: 30px;
+}
+#body div.content div ul {
+	list-style: none;
+	margin: 0;
+	overflow: hidden;
+	padding: 0 0 65px;
+}
+#body div.content div ul li {
+	float: left;
+	margin: 0 0 0 83px;
+	width: 207px;
+}
+#body div.content div ul li:first-child {
+	margin: 0;
+}
+#body div.content div ul li img {
+	display: block;
+	max-width: 100%;
+	width: auto;
+}
+#body div.content div ul li h4 {
+	font-family: 'nixie_oneregular';
+	font-size: 18px;
+	font-weight: normal;
+	margin: 0;
+	padding: 12px 0 0;
+	text-align: center;
+}
+#body form {
+	margin: 25px auto 0;
+	overflow: hidden;
+	width: 460px;
+}
+#body form label {
+	display: block;
+	padding: 15px 0 0;
+}
+#body form label span {
+	display: block;
+	line-height: 27px;
+	padding: 0 0 5px
+}
+#body form label input {
+	background: #d1d3d4;
+	border: 1px solid #b6d8cf;
+	color: #315f52;
+	display: block;
+	font-family: 'latoregular';
+	font-size: 14px;
+	height: 46px;
+	line-height: 46px;
+	padding: 0 5px;
+	width: 448px;
+}
+#body form label textarea {
+	background: #d1d3d4;
+	border: 1px solid #b6d8cf;
+	color: #315f52;
+	display: block;
+	font-family: 'latoregular';
+	font-size: 14px;
+	height: 250px;
+	line-height: 30px;
+	overflow: auto;
+	padding: 0 5px;
+	resize: none;
+	width: 448px;
+}
+#body form input#send {
+	background: #077054;
+	border: none;
+	border-radius: 5px;
+	color: #99fa99;
+	cursor: pointer;
+	font-family: 'latoregular';
+	font-size: 14px;
+	float: right;
+	height: 30px;
+	margin: 8px 0 0;
+	width: 50px;
+}
+#body form input#send:hover {
+	background: #d3a3ff;
+	color: #000000;
+}
+#body ul.blog {
+	list-style: none;
+	margin: 0;
+	padding: 0;
+}
+#body ul.blog li {
+	overflow: hidden;
+	padding: 104px 100px 0 0;
+}
+#body ul.blog li:first-child {
+	padding: 0 100px 0 0;
+}
+#body ul.blog li img {
+	display: block;
+	float: left;
+	margin: 0 20px 0 0;
+	max-width: 100%;
+	width: auto;
+}
+#body ul.blog li h3 {
+	line-height: 20px;
+	padding: 0 0 8px;
+}
+#body ul.blog li h3 a,
+#body div.content div.sidebar ul li h4 a {
+	color: #315f52;
+	text-decoration: none;
+}
+#body ul.blog li h3 a:hover,
+#body div.content div.sidebar ul li h4 a:hover {
+	text-decoration: underline;
+}
+#body ul.blog li span,
+#body div.content div.article span,
+#body div.content div.sidebar ul li span {
+	display: block;
+	line-height: 30px;
+}
+#body div.content div.article {
+	width: 570px;
+}
+#body div.content div.article img {
+	display: block;
+	margin: 0 0 9px;
+	max-width: 100%;
+	width: auto;
+}
+#body div.content div.article p {
+	padding: 0 0 30px;
+}
+#body div.content div.sidebar {
+	float: left;
+	margin: 0 0 0 50px;
+	width: 259px;
+}
+#body div.content div.sidebar ul {
+	padding: 20px 0 0;
+}
+#body div.content div.sidebar ul li {
+	border-top: 1px solid #88b4a8;
+	float: none;
+	margin: 0;
+	padding: 18px 0 28px;
+	width: auto;
+}
+#body div.content div.sidebar ul li:first-child {
+	border: none;
+	padding: 0 0 28px;
+}
+#body div.content div.sidebar ul li h4 {
+	line-height: 30px;
+	text-align: left;
+}
+#footer {
+	margin: 0 auto;
+	max-width: 960px;
+	overflow: hidden;
+	padding: 30px 0 60px;
+}
+#footer div {
+	float: left;
+	width: 500px;
+}
+#footer div span {
+	color: #99fa99;
+	display: block;
+	font-size: 26px;
+	line-height: 24px;
+}
+#footer div p {
+	color: #b6d8cf;
+	font-size: 12px;
+	line-height: 30px;
+}
+#footer div#connect {
+	float: right;
+	overflow: hidden;
+	width: auto;
+}
+#footer div#connect a {
+	background: url(../images/icons.png) no-repeat;
+	display: block;
+	float: left;
+	text-indent: -99999px;
+}
+#footer div#connect a#facebook {
+	background-position: 0 0;
+	height: 30px;
+	width: 16px;
+}
+#footer div#connect a#twitter {
+	background-position: 0 -30px;
+	height: 30px;
+	margin: 0 0 0 28px;
+	width: 37px;
+}
+#footer div#connect a#googleplus {
+	background-position: 0 -61px;
+	height: 32px;
+	margin: 0 0 0 19px;
+	width: 32px;
+}
+#footer div#connect a#googleplus {
+	background-position: 0 -61px;
+	height: 32px;
+	margin: 0 0 0 19px;
+	width: 32px;
+}
+#footer div#connect a#pinterest {
+	background-position: 0 -94px;
+	height: 30px;
+	margin: 0 0 0 23px;
+	width: 30px;
 }
