--- a/css/training-styles.css
+++ b/css/training-styles.css
@@ -1,5 +1,5 @@
 body{
-	background-color: aquamarine;
+	background-color: white;
 }
 
 .container{
@@ -34,16 +34,13 @@ nav li{
 }
 
 nav a{
-	color: white;
+	color: black;
 	text-decoration: none;
 	text-transform: uppercase;
 	font-family: sans-serif;
 	font-size: 14px;
 }
 
-nav a:hover{
-	color: #950740
-}
 
 .page-heading{
     text-align:center;
@@ -57,7 +54,7 @@ nav a:hover{
 }
 
 .form{
-	background-color: cadetblue;
+	background-color: white;
 }
 
 .form-group{
