--- a/css/style.css
+++ b/css/style.css
@@ -1,32 +1,11 @@
 
-html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,dl,dt,dd,ol,nav ul,nav li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,embed,figure,figcaption,footer,header,hgroup,menu,nav,output,ruby,section,summary,time,mark,audio,video{margin:0;padding:0;border:0;font-size:100%;font:inherit;vertical-align:baseline;}
-article, aside, details, figcaption, figure,footer, header, hgroup, menu, nav, section {display: block;}
-ol,ul{list-style:none;margin:0px;padding:0px;}
-blockquote,q{quotes:none;}
-blockquote:before,blockquote:after,q:before,q:after{content:'';content:none;}
-table{border-collapse:collapse;border-spacing:0;}
 
-a{text-decoration:none;}
-.txt-rt{text-align:right;}/* text align right */
-.txt-lt{text-align:left;}/* text align left */
-.txt-center{text-align:center;}/* text align center */
-.float-rt{float:right;}/* float right */
-.float-lt{float:left;}/* float left */
-.clear{clear:both;}/* clear float */
-.pos-relative{position:relative;}/* Position Relative */
-.pos-absolute{position:absolute;}/* Position Absolute */
-.vertical-base{	vertical-align:baseline;}/* vertical align baseline */
-.vertical-top{	vertical-align:top;}/* vertical align top */
-nav.vertical ul li{	display:block;}/* vertical menu */
-nav.horizontal ul li{	display: inline-block;}/* horizontal menu */
-img{max-width:100%;}
-/*end reset*/
+
 
 body{
 padding:0;
 margin:0;
 font-family: 'Open Sans', sans-serif;
-background: url(../images/1.png) repeat;
 }
 
 h1,h2,h3,h4,h5,h6{
@@ -42,7 +21,7 @@ ul{
 label{
 	margin:0;
 }
-/*-- main --*/
+
 .main {
     padding: 50px 0;
 }
@@ -52,7 +31,7 @@ label{
 	text-transform:uppercase;
 	color:#B3E03F;
     margin-bottom: 25px;
-	font-family: 'Fugaz One', cursive;
+	font-family: 'Brush Script MT', cursive;
 }
 .content{
 	width:40%;
@@ -68,108 +47,34 @@ p.footer {
 p.footer a{
 	color:#3AD5A0;
 }
-p.footer a:hover{
-	color: #B3E03F;	
-}
-/******** SAP ************/
-.sap_tabs{
-	clear:both;
-	padding: 0em 0 0em;
-}
-.pay-tabs{
-    margin: 0 0 2em 0;
-    padding: 1em 1em 1.5em 1em;
-    background: #fff;
-    border: 1px solid #e7ebee;	
-}
-.pay-tabs h2{
-    font-size: 26px;
-    text-align: center;
-    margin-bottom: 25px;
-    color: #3AD5A0;
-    font-weight: 500;
-    font-family: 'Alegreya Sans', sans-serif;
-}
-.resp-tabs-list {
-    list-style: none;
-    margin: 0 0 0em 0;
-    padding: 0;
-}
-.resp-tab-item{
-    font-size: 14px;
-    text-decoration: none;
-    color: #a9acb1;
-	font-weight:600;
-    cursor: pointer;
-	text-align: center;
-	list-style: none;
-	outline: none;
-	-webkit-transition: all 0.3s ease-out;
-	-moz-transition: all 0.3s ease-out;
-	-ms-transition: all 0.3s ease-out;
-	-o-transition: all 0.3s ease-out;
-	transition: all 0.3s ease-out;
-	text-transform:capitalize;
-	display: inline-block;
-    margin: 0 4%;
-    float: left;
-    width: 17%;
-}
-.resp-tab-active{
-    color: #B3E03F;
-}
-.resp-tabs-container {
+
+
+.container {
 	padding: 0px;
 	clear: left;
     padding: 2em 2.5em;
     background: #fff;
     border: 1px solid #e7ebee;	
 }
-h2.resp-accordion {
-	cursor: pointer;
-	padding: 5px;
-	display: none;
-}
-.resp-tab-content {
-	display: none;
-}
-.resp-content-active, .resp-accordion-active {
-   display: block;
-}
-li.resp-tab-item span .pic1{
-    background: url(../images/pic2.png) no-repeat 38px 15px #fafafa !important;
 
-}
-li.resp-tab-item span .pic2{
-    background: url(../images/pic3.png) no-repeat 38px 15px #fafafa !important;
 
-}
-li.resp-tab-item span .pic3{
-    background: url(../images/pic1.png) no-repeat 14px 15px #fafafa !important;
-
-}
-li.resp-tab-item span .pic4{
-    background: url(../images/pic4.png) no-repeat 38px 15px #fafafa !important;
-}
-li.resp-tab-item span .pic1,li.resp-tab-item span .pic2,li.resp-tab-item span .pic3,li.resp-tab-item span .pic4{
-    width: 100%;
-    height: 32px;
-    display: block;
-    border: 1px solid #e7ebee;
-    padding: 15px 0px;
+.pay-method h3{
+    font-size: 26px;
+    text-align: center;
     margin-bottom: 15px;
-	cursor:pointer;	
+    color: #3AD5A0;
+    font-weight: 500;
+    font-family: 'Verdana', sans-serif;
 }
-li.resp-tab-item.resp-tab-active span label {
-    border: 1px solid #B3E03F;
-}
+
+
 .payment-info h3{
     font-size: 26px;
     text-align: center;
     margin-bottom: 15px;
     color: #3AD5A0;
     font-weight: 500;
-    font-family: 'Alegreya Sans', sans-serif;
+    font-family: 'Verdana', sans-serif;
 }
 .tab-for input[type="text"] {
     width:96%;
@@ -187,6 +92,15 @@ li.resp-tab-item.resp-tab-active span label {
 	-o-transition:0.5s all;
 	-ms-transition:0.5s all;
 }
+
+.card-choice {
+	 color: #435964;
+    font-size: 13px;
+    text-transform: uppercase;
+    margin: 0 0 8px 0;
+    font-weight: 600;
+}
+
 .tab-for h5 ,.tab-form-left h5,.tab-form-right h5{
     color: #435964;
     font-size: 13px;
@@ -194,19 +108,9 @@ li.resp-tab-item.resp-tab-active span label {
     margin: 0 0 8px 0;
     font-weight: 600;
 }
-.tab-for input[type="text"]:hover{
-	border: 1px solid #B3E03F;
-    transition:0.5s all;
-	-webkit-transition:0.5s all;
-	-moz-transition:0.5s all;
-	-o-transition:0.5s all;
-	-ms-transition:0.5s all;
-}
-input.pay-logo{
-    width: 89.5% !important;
-    padding: 8px 45px 8px 8px !important;
-    background: url(../images/visa.png) no-repeat 507px 5px;
-}
+
+
+
 .tab-form-left {
     float: left;
     width: 48%;
@@ -262,14 +166,7 @@ input.text_box {
 	-o-transition:0.5s all;
 	-ms-transition:0.5s all;
 }
-.tab-form-right input[type="text"]:hover{
-	border: 1px solid #B3E03F;
-    transition:0.5s all;
-	-webkit-transition:0.5s all;
-	-moz-transition:0.5s all;
-	-o-transition:0.5s all;
-	-ms-transition:0.5s all;
-}
+
 .payment-info form input[type="submit"] {
     background: #B3E03F;
     color: #FFFFFF;
@@ -281,6 +178,7 @@ input.text_box {
     width: 22%;
     cursor: pointer;
     font-weight: 600;
+	margin-top:50px;
 	margin-bottom:30px;
     transition: 0.5s all;
     -webkit-transition: 0.5s all;
@@ -288,51 +186,9 @@ input.text_box {
     -o-transition: 0.5s all;
     -ms-transition: 0.5s all;
 }
-.payment-info form input[type="submit"]:hover{
-    background: #3AD5A0;
-    transition: 0.5s all;
-    -webkit-transition: 0.5s all;
-    -moz-transition: 0.5s all;
-    -o-transition: 0.5s all;
-    -ms-transition: 0.5s all;
-}
 
-.single-bottom ul li{
-	list-style:none;
-	padding:0px;
-}
-.single-bottom ul li input[type="checkbox"] {
-  display: none;
-}
-.single-bottom ul li input[type="checkbox"]+label {
-    position: relative;
-    padding-left: 31px;
-    border: none;
-    outline: none;
-    font-size: 13px;
-    color: #2d3e50;
-	font-weight:600;
-	line-height:1.8em;
-}
-.single-bottom ul li input[type="checkbox"]+label span:first-child {
-	width: 14px;
-    height: 14px;
-    display: inline-block;
-    border: 2px solid #B3E03F;
-    position: absolute;
-    left: 0;
-    top: 1px;
-}
-.single-bottom ul li input[type="checkbox"]:checked+label span:first-child:before {
-  content: "";
-  background:url(../images/11.png)no-repeat;
-  position: absolute;
-    left: -1px;
-    top: 0px;
-  font-size: 10px;
-  width:16px;
-  height:16px;
-  }
+
+
 .radio {
 	position: relative;
 	display:inline-block;
@@ -352,12 +208,10 @@ input.text_box {
 	position: absolute;
 	left: -9999px;
 }
-.radio-btns label {
-  font-size: 14px;
-  color: #000;
+.card-choice label {
   padding: 0px 0 0 10px;
-  font-weight:600;
   }
+  
 .radio i {
 	position: absolute;
 	top:5px;
@@ -373,39 +227,39 @@ input.text_box {
 .radio i {
 	border-radius: 50%;
 }
-.radio input + i:after {
-	position: absolute;
-	opacity: 0;
-	transition: opacity 0.1s;
-	-o-transition: opacity 0.1s;
-	-ms-transition: opacity 0.1s;
-	-moz-transition: opacity 0.1s;
-	-webkit-transition: opacity 0.1s;
-}
- .radio input + i:after {
-	content: '';
-	top: 6px;
-	left: 7px;
-	width: 5px;
-	height: 5px;
-	border-radius: 50%;
-	-webkit-border-radius: 50%;
-	-moz-border-radius: 50%;
-	-o-border-radius: 50%;
-}
+
 .radio input:checked + i:after{
 	opacity: 1;
+	color:black
 }
 
 label.checkbox {
 	width: 28%;
 	floaT: left;
 }
-/*** normal state ***/
-.radio i {
-	transition: border-color 0.3s;
-	-o-transition: border-color 0.3s;
-	-ms-transition: border-color 0.3s;
-	-moz-transition: border-color 0.3s;
-	-webkit-transition: border-color 0.3s;
+
+
+.check_box {
+    margin-bottom: 5px;
 }
+.payment-info a{
+	padding:8px 10px;
+	font-size:14px;
+	color:#fff;
+	font-weight:600;
+	text-transform:uppercase;
+	background:#B5E045;
+}
+
+
+
+
+.payment-info h4 {
+    font-size: 14px;
+    text-align: center;
+    color: #000;
+}
+
+
+
+
