--- a/css/style2.css
+++ b/css/style2.css
@@ -1,5 +1,3 @@
-@import url(http://fonts.googleapis.com/css?family=Roboto:100,300,500);
-
 body {
 	margin:0 auto;
 	padding:0;
@@ -7,7 +5,6 @@ body {
 	background:url("../img/bg.png") repeat #333;
 	font-weight:300;
 	font-size:16px;
-	font-family: 'Roboto';
 }
 
 h3 {
@@ -15,18 +12,19 @@ h3 {
 	text-align:center;
 	font-size:42px;
 	font-weight:100;
-	color:#fff;
+	color:#ffffff;
 }
 
 a {
-	color:#1bc4a2;
+	color: primary;
 	text-decoration:none;
+
 }
 
 .btn {
 	padding:6px 10px;
-	background:#16a085;
-	color:#fff;
+	background: #ffffff;
+	color:#ffffff;
 	font-size:12px;
 	border-radius:3px;
 	-webkit-border-radius:3px;
@@ -47,15 +45,19 @@ a {
 
 .danger:active {
 	background:#b53529;
-	box-shadow:inset 0 0 10px rgba(0,0,0,0.3);
+	box-shadow:inset 0 0 10px rgb(255, 255, 255);
 	-webkit-box-shadow:inset 0 0 10px rgba(0,0,0,0.3);
 }
 
 .active, .active:hover, .active:active {
-	background:#cbd0d3 !important;
-	color:#777 !important;
+	background:#ffffff !important;
+	color:#000000 !important;
 	cursor:auto !important;
-	box-shadow:none !important;
+	box-shadow:auto !important;
+	border-style: solid;
+	border-color: #b53529;
+	word-spacing: normal;
+	
 }
 
 #loading {
@@ -86,13 +88,12 @@ a {
 	width:900px;
 	height:auto;
 	overflow:hidden;
-	background:#1abc9c;
-	background:rgba(26, 188, 156, 0.3);
+	background:#000000;
 	box-shadow:0 0 20px #222;
-	border-right:10px solid #16a085;
-	border-left:10px solid #16a085;
-	border-top:10px solid #16a085;
-	border-bottom:10px solid #16a085;
+	border-right:10px solid#ffffff;
+	border-left:10px solid #ffffff;
+	border-top:10px solid #ffffff;
+	border-bottom:10px solid #ffffff;
 }
 
 #inbox table, #inbox table tr {
@@ -102,7 +103,11 @@ a {
 }
 
 tr.border_bottom td {
-  border-bottom:2px solid #16a085;
+ 
+  	border-right:2px solid#ffffff;
+	border-left:2px solid #ffffff;
+	border-top:12px solid #ffffff;
+	border-bottom:2px solid #ffffff;
 }
 
 /*tr:last-child.border_bottom td {
@@ -110,24 +115,25 @@ tr.border_bottom td {
 }*/
 
 #inbox table tr th, #inbox table tr td {
-	color:#fff;
-	font-size:12px;
+	color:#ffffff;
+	font-size:16px;
+	text-align:center;
 }
 
 #inbox table tr th {
 	padding:10px;
-	background:#16a085;
+	background:#000000;
 }
 
 #inbox table tr td {
 	padding:10px;
 	text-align:center;
-	border-right:1px solid #16a085;
-	border-left:1px solid #16a085;
+	border-right:1px solid #ffffff;
+	border-left:1px solid #ffffff;
 }
 
 #inbox table tr td a {
-	color:#fff;
+	color:#ffffff;
 }
 
 #msg {
@@ -144,22 +150,28 @@ tr.border_bottom td {
 }
 
 #msg table tr td {
-	margin-right:10px;
-	padding:5px;
-	background:#16a085;
-	color:#fff;
-	font-size:12px;
-	border-radius:3px;
-	-webkit-border-radius:3px;
+	margin:0 0 0px;
+	padding:15px;
+	float:left;
+	background: #000000;
+	color:#ffffff;
+	font-size:14px;
+	line-height:5px;
+	white-space: -moz-pre-wrap;
+	white-space: -pre-wrap;
+	white-space: -o-pre-wrap;
+	white-space: pre-wrap;
+	word-wrap: break-word;
+	
 }
 
 #msg pre {
-	margin:0 0 20px;
+	margin:0 0 60px;
 	padding:10px;
 	float:left;
-	color:#fff;
-	font-family: 'Roboto';
-	font-size:12px;
+	background: #000000;
+	color:#ffffff;
+	font-size:14px;
 	line-height:18px;
 	white-space: -moz-pre-wrap;
 	white-space: -pre-wrap;
@@ -170,23 +182,44 @@ tr.border_bottom td {
 
 .remove {
 	margin:0 0 0 10px;
+	
 }
 
 #pages a {
-	margin:0 10px 0 0;
-	-webkit-transition:0.1s ease all;
-	   -moz-transition:0.1s ease all;
-	    -ms-transition:0.1s ease all;
-	     -o-transition:0.1s ease all;
-	        transition:0.1s ease all;
+
+background: #606060;
+	color:#ffffff;
+	font-size:14px;
+		margin:10 10 10 10px;
+	color:#000000 !important;
+	box-shadow:auto !important;
+	border-style: solid;
+	border-color: #b53529;
+	font-size:14px;
 }
 
 #pages a:hover {
-	background:#138e76;
+
+
+	font-size:14px;
+		background:#ffffff !important;
+	color:#000000 !important;
+	box-shadow:auto !important;
+	border-style: solid;
+	border-color: #b53529;
+
 }
 
 #pages a:active {
-	background:#12826b;
-	box-shadow:inset 0 0 10px rgba(0,0,0,0.3);
-	-webkit-box-shadow:inset 0 0 10px rgba(0,0,0,0.3);
+    
+
+	font-size:14px;
+		background:#ffffff !important;
+	color:#000000 !important;
+	cursor:auto !important;
+	box-shadow:auto !important;
+	border-style: solid;
+	border-color: #b53529;
+box-shadow:inset 0 0 10px rgba(0,0,255,0.3);
+	-webkit-box-shadow:inset 0 0 10px rgba(0,0,255,0.3);
 }
